Stop large cumulative layout shift caused my map height (#1154)

--- a/public_html/wp-content/themes/wporg-events-2023/postcss/page/front-page/cover.pcss
+++ b/public_html/wp-content/themes/wporg-events-2023/postcss/page/front-page/cover.pcss
@@ -31,15 +31,19 @@
 		}
 
 		.wp-block-columns .wp-block-column:last-child {
-			flex-basis: 66.665%  !important;
+			flex-basis: 66.665% !important;
 		}
 	}
 
-	& .wp-block-wporg-google-map .wporg-google-map__container {
+	& .wp-block-wporg-google-map {
 		height: 430px;
 
 		@media (--small-only) {
 			height: 246px;
+		}
+
+		& .wporg-google-map__container {
+			height: 100%;
 		}
 	}
 }
